cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)
set(GCC_ERROR_LIMIT "-ferror-limit=200")
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_ERROR_LIMIT}" )

include_directories(include)

add_subdirectory(src)
add_subdirectory(test)
add_subdirectory(examples/ast-callback-visitor)
add_subdirectory(examples/ast-visitor-base)
add_subdirectory(examples/ast-visitor-result)
add_subdirectory(examples/lalr)
add_subdirectory(examples/simple)
add_subdirectory(examples/text-brackets)
add_subdirectory(examples/arithmetic)
add_subdirectory(examples/reverse-polish-notation)
add_subdirectory(examples/roman-numerals)
add_subdirectory(examples/backus-naur-form)
add_subdirectory(lib/googletest)