project(noam)

add_library(noam SHARED grammar/symbols/Symbol.cpp grammar/symbols/Symbol.h grammar/symbols/Terminal.cpp grammar/symbols/Terminal.h grammar/symbols/NonTerminal.cpp grammar/symbols/NonTerminal.h grammar/symbols/Named.cpp grammar/symbols/Named.h grammar/rules/Substitution.cpp grammar/rules/Substitution.h Clonable.h grammar/rules/Rule.cpp grammar/rules/Rule.h grammar/rules/SimpleRule.cpp grammar/rules/SimpleRule.h grammar/rules/AlternativeRule.cpp grammar/rules/AlternativeRule.h grammar/Grammar.cpp grammar/Grammar.h grammar/SimpleGrammar.cpp grammar/SimpleGrammar.h)